# cheap_pie

./: .gitignore  Pipfile  README.md  TODO.txt  cbitfield.py  cheap_pie.py  cheap_pie.sh  cheap_pie_test.py  conda.sh  count_lines.sh  cp_cli.py  cp_dummy_transport.py  cp_jlink_transport.py  cp_register.py  hal.docx  hal2doc.py  ipxact2svd.xslt  ipxact_parse.py  pypi.sh  pyproject.toml  register_description_tools.txt  requirements.txt  requirements_extra.txt  search_bitfield.py  setup.py  start.ipy  svd_parse.py  test_pypi.sh  venv.sh  xmlreg2struct.py
.github/workflows/: pylint.yml  release.yml  test.yml  test_latest.yml
cfgs/: basic_verilator.sh  counter_verilator.sh  cp_qn9080_dummy.sh  cp_rt1010_dummy.sh  cp_rt1010_jlink.sh  esp8266_dummy.sh
cheap_pie/: venv.sh
cheap_pie/cfgs/: esp8266_esptool.sh  k20_dummy.sh  my_subblock.sh  rt1010_jlink.sh
cheap_pie/cheap_pie.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cheap_pie/devices/rdl/: basic.xml  counter.xml
cheap_pie/devices/verilog/: basic_rf.v
cheap_pie/parsers/: cp_parsers_wrapper.py
cheap_pie/parsers/ipxact_rules/: convert_expressions-xalan.xsl  from1.5_to_1685_2009.xsl
cheap_pie/tools/: rdl2any.py
cheap_pie_core/: cbitfield.py  cheap_pie.py  cheap_pie_test.py  cp_banner.py  cp_cli.py  cp_hal.py  cp_register.py  test.py
devices/: LICENSE.txt  basic.xml  my_subblock.xml
devices/verilog/: counter_rf.v
jlink/: cp_jlink_transport.py  jlink.py  jlink_read_reg.py  jlink_write_reg.py  jlinkarm.h
parsers/: cp_parsers_wrapper.py  ipxact_parse.py  ipyxact_parse.py  name_subs.py  rdl_parser.py  register_description_tools.txt  svd_parse.py  svd_parse_repo.py  xml_xslt.py
parsers/ipxact_rules/: convert_expressions-exslt.xsl  convert_expressions-other.xsl  convert_expressions.xsl  from1.0_to_1.1.xsl  from1.4_to_1685_2009.xsl  from1685_2009_to_1685_2014.xsl  kactus_extensions_2014.xsl
src/cheap_pie/: __init__.py  cheap_pie.sh  pylint.sh  regname.json
src/cheap_pie/cfgs/: counter_verilator.sh  k64_jlink.sh  qn9080_jlink.sh  qn9080_ocd.sh
src/cheap_pie/cheap_pie_core/: __init__.py  cbitfield.py  cheap_pie.py  cheap_pie_main.py  cp_banner.py  cp_builder.py  cp_cli.py  cp_hal.py  cp_register.py  test.py
src/cheap_pie/devices/: reg_with_dim.xml
src/cheap_pie/notebooks/: cheap_pie_demo.ipynb
src/cheap_pie/parsers/: __init__.py  common.py  cp_parsers_wrapper.py  ipxact_parse.py  ipyxact_parse.py  rdl_parse.py  register_description_tools.txt  svd_parse.py  svd_parse_repo.py  xml_xslt.py
src/cheap_pie/parsers/ipxact_rules/: convert_expressions-msxsl.xsl  from1.1_to_1.2.xsl  from1.2_to_1.4.xsl  (+2 more)
src/cheap_pie/scripts/: cp_interactive.py
src/cheap_pie/tools/: __init__.py  cp_hal2doc.py  hal2doc.py  rdl2any.py  rdl2verilog.py  reload_module.py  search.py
src/cheap_pie/transport/: __init__.py  cp_dummy_transport.py  cp_esptool_transport.py  cp_jlink_transport.py  cp_pyocd_transport.py  cp_pyverilator_transport.py
test/: test.sh
tools/: hal2doc.py  rdl2any.py  register_description_tools.txt  search.py  search_bitfield.py  test_rdl.py  xml_xslt.py
transport/: cp_dummy_transport.py  cp_esptool_transport.py  cp_jlink_transport.py  cp_pyocd_transport.py  cp_pyverilator_transport.py
