[build-system]
requires = ["setuptools<70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cheap_pie"
version = "1.2.8"
description = "A python tool for silicon validation."
readme = "README.md"
requires-python = ">=3.8"

authors = [
  { name = "Marco Merlin", email = "marcomerli@gmail.com" }
]

keywords = ["python", "silicon", "validation"]

dependencies = []

classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]

# core modules are all optional; users can install extras as needed
# the individual dependencies are defined under [project.optional-dependencies]

[project.optional-dependencies]
# basic parsing and utility libraries
parsers = [
  "untangle",
  "cmsis-svd",
  "ipyxact",
  "peakrdl-ipxact",
  "peakrdl-uvm",
  "peakrdl-verilog",
  "peakrdl-cheader",
  "requests"
]
# document export
doc = ["python-docx", "lxml"]
# visualization
wavedrom = ["wavedrom", "wavedrom-ascii"]
# hardware simulation
sim = ["pyverilator-mm"]

hkl = ["hickle"]
transport = ["pylink-square", "pyocd", "esptool", "pyverilator-mm"]
other = ["packaging", "lxml"]
build = ["build", "setuptools", "wheel"]

# aggregated extras
all = [
  # parsing & utils
  "untangle","cmsis-svd","ipyxact","peakrdl-ipxact","peakrdl-uvm",
  "peakrdl-verilog","peakrdl-cheader","requests",
  # docs & visualization
  "python-docx","lxml","wavedrom","wavedrom-ascii",
  # simulation
  "pyverilator-mm",
  # transports & helpers
  "hickle","pylink-square","pyocd","esptool",
  "packaging","lxml","build","setuptools","wheel"
]

[project.urls]
Homepage = "https://github.com/bat52/cheap_pie"
Source = "https://github.com/bat52/cheap_pie"
Tracker = "https://github.com/bat52/cheap_pie/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
"cheap_pie" = ["*.svd", "*.xml", "*.rdl", "*.txt"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
cp_interactive = "cheap_pie.scripts.cp_interactive:cp_interactive"
cp_hal2doc     = "cheap_pie.scripts.cp_hal2doc:cp_hal2doc"
